test/files/neg/t5507.check
t5507.scala:5: warning: Fruitless specialization of Unit in parameter position. Consider using `@specialized(Specializable.Arg)` instead.
final class C[@specialized A, @specialized B](a: A, b: B)
                                             ^
1 warning
error: No warnings can be incurred under -Werror.
